--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>File Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <h1>Uh Oh.</h1>
+    <p>The page <code>{{ path }}</code> you are looking for was moved or doesn't exist.</p>
+    <p><a href="{{ url_for('index') }}">Back to Home</a></p>
 {% endblock %}
